<resources>
    <string-array name="note_type">
        <item>Normal</item>
        <item>Important</item>
        <item>Reminder</item>
    </string-array>
    <string-array name="notif_color">
        <item>Blue</item>
        <item>Green</item>
        <item>Yellow</item>
    </string-array>
    <string name="app_name">Momento</string>
    <string name="action_settings">Settings</string>
    <string name="add">add</string>
    <string name="title_activity_create_note">Create Note</string>
    <string name="title_activity_information">Information</string>
    <string name="title_activity_edit__note">Edit Note</string>
    <string name="title_activity_alert">Alert</string>
    <string name="title_hint">Title</string>
    <string name="hint_description">Description</string>
    <string name="note_type_text">Note Type:</string>
    <string name="set_alert">set_alert</string>
    <string name="textview_date">Select Date</string>
    <string name="txt_time">Enter Time:</string>
    <string name="added_alert">An Alert can be added</string>
    <string name="back">Back to Main</string>
    <string name="save">Save Note</string>
    <string name="Not_Set">Not Set</string>
    <string name="hour_minutes">HH:mm</string>
    <string name="dateformate">dd/MM/yyyy</string>
    <string name="alert_title">title</string>
    <string name="alarmtext">Alert: </string>
    <string name="ok">Ok</string>
    <string name="title_msg">title</string>
    <string name="type_list_entry">Small Text</string>
    <string name="test_time">testtime</string>
    <string name="rowID">rowID</string>
    <string name="edit">Edit Note</string>
    <string name="discard">Discard Note</string>
    <string name="delete_title">Delete Selected Note</string>
    <string name="delete_message">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="medium_text">Medium Text</string>
    <string name="alarm_active">An Alert can be added!</string>
    <string name="Not_Set_Alert">Not Set</string>
    <string name="pick_a_location">Pick a location</string>
    <string name="dialog_title">Dialog Title</string>
    <string name="sms_dialog">Enter Your Text</string>
    <string name="share_via_sms">Share Via SMS</string>
    <string name="share">Share</string>
    <string name="slogan">Remember Everything</string>
    <string name="led_color">Notification LED color</string>
    <string name="pick_action">Pick an action</string>
    <string name="cancel">Cancel</string>
</resources>
